feat: add standarded error messages

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,8 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.2.5</version> <!-- Usa Spring Framework 6.1.x -->
 	</parent>
 	<groupId>com.organizaAi</groupId>
 	<artifactId>OrganizaAi</artifactId>
@@ -100,6 +99,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.30</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
