--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,5 @@ app.jwt.expiration=1800000
 #logging.level.org.springframework.security=NONE
 
 spring.flyway.baseline-on-migrate=true
+
+server.port=8081
